# Project: kimnaty

# when changing dependencies also consider `requirements.txt` and `environment.yml`

[project]
name = "kimnaty"
version = "0.0.0"   # rolling release has no version
description = "monitoring room temperature/humidity"
dependencies = [
    "gracefulkiller==0.4.7",
    "matplotlib==3.9.2",
    "mausy5043-common==1.8.2",
    "numpy==2.1.1",
    "pandas==2.2.3",
    "pyarrow==17.0.0",
    "pylywsdxx==2.2.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "requests==2.32.3",
    "sh==2.0.7",
    ]
license = {file = "LICENSE"}
authors = [
  { name="Mausy5043" },
  ]
readme = "README.md"
requires-python = "3.12"


[tool.autopep8]
max_line_length = 98
in-place = true
recursive = true
aggressive = 1
ignore = [
# line too long; is handled by `pylint`
    "E501",
]

[tool.bandit]
skips = []

[tool.black]
line-length = 98
target-version = ["py39", "py310", "py311", "py312"]

[tool.flake8]
max_line_length = 98
ignore = [
# <M> is too complex; we don't care about complexity,
    "C901",
# whitespace before ':'; `black` enforces white-space before and after ':', so can be ignored.
    "E203",
# module level import not at top of file; handled by `pylint`
    "E402",
# line too long; is handled by `pylint`
    "E501",
# line break before binary operator; `black` enforces this
    "W503",
]

[tool.pydocstyle]
inherit = false
convention = 'google'
match = '.*\\.py'
add-ignore = 'D'

[tool.mypy]
ignore_errors = true
# ; strict = false
# ; warn_return_any = true
# ; warn_unused_configs = true
# ; warn_redundant_casts = true
# ; warn_unused_ignores = true
# ; strict_equality = true
# ; extra_checks = true
# ; check_untyped_defs = true
# ; disallow_subclassing_any = true
# ; disallow_untyped_decorators = true
# ; disallow_any_generics = true
# ; disallow_untyped_calls = true
# ; disallow_incomplete_defs = true
# ; disallow_untyped_defs = true
no_implicit_reexport = true
